welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: type mismatch;
 found   : Int(0)
 required: Boolean
	var c:Boolean = 0
                        ^